Fix box table overflows

--- a/src/components/screens/monitor/blocks/blocks.css
+++ b/src/components/screens/monitor/blocks/blocks.css
@@ -13,3 +13,19 @@
     display: initial;
   }
 }
+
+.tableRow {
+
+  & > span {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: block;
+  }
+
+  & > span:last-child {
+    padding-left: 0px;
+    padding-right: 0px;
+    text-overflow: initial;
+  }
+}
